--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -38,6 +38,13 @@
         <activity
             android:name=".StudentskiServisi"
             />
+        <receiver android:name="ExampleAppWidgetProvider" >
+		    <intent-filter>
+		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+		    </intent-filter>
+		    <meta-data android:name="android.appwidget.provider"
+		               android:resource="@xml/example_appwidget_info" />
+		</receiver>
         
         
     </application>
