--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,23 +5,28 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="10" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo1_png"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.fonis.MainActivity"
+            android:name="com.fonis.Logo"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.fonis.MainActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".VestiActivity"
@@ -38,15 +43,13 @@
         <activity
             android:name=".StudentskiServisi"
             />
-        <receiver android:name="ExampleAppWidgetProvider" >
+        <receiver android:name="widget.FonisAppWidgetProvider" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 		    </intent-filter>
 		    <meta-data android:name="android.appwidget.provider"
 		               android:resource="@xml/example_appwidget_info" />
 		</receiver>
-        
-        
     </application>
 
 </manifest>
